--- a/prebuild/Makefile
+++ b/prebuild/Makefile
@@ -1,5 +1,6 @@
 SHELL := /usr/local/bin/bash -o pipefail
 NAME = sourceryinstitute/jupyter-caf-kernel
+UBADGER_ENDPOINT = "https://hooks.microbadger.com/images/sourceryinstitute/jupyter-caf-kernel/CEL6DIVw-OVbUIXieZhZwvDXl3I="
 #WORKDIR = ${HOME}/Sandbox
 
 .PHONY: help build push run runclean clean
@@ -15,14 +16,14 @@ build: $(subst /,_,$(NAME))-build.stamp ## Build docker file. Depending on which
 
 $(subst /,_,$(NAME))-build.stamp: Dockerfile .dockerignore hooks/build ## Target for doing & timestamping the build
 	touch $@
-	@hooks/build 2>&1 | tee $(subst stamp,log,$@) || rm -rf $(subst stamp,log,$@)
+	hooks/build 2>&1 | tee $(subst stamp,log,$@) || rm -rf $(subst stamp,log,$@) $@
 
 push: $(subst /,_,$(NAME))-push.stamp ## Push prebuild docker image up to hub.docker.com
 
-$(subst /,_,$(NAME))-push.stamp: build Dockerfile .dockerignore hooks/build ## Target for doing & timestamping the push
+$(subst /,_,$(NAME))-push.stamp: $(subst /,_,$(NAME))-build.stamp Dockerfile .dockerignore hooks/build ## Target for doing & timestamping the push
 	touch $@
-	docker push $(NAME) | tee $(subst stamp,log,$@) || rm -rf $(subst stamp,log,$@)
-	[[ -n "${SI_jupyter_CAF_kernel_UBADGER_ENDPOINT}" ]] && curl -X POST ${SI_jupyter_CAF_kernel_UBADGER_ENDPOINT}
+	docker push $(NAME) | tee $(subst stamp,log,$@) || rm -rf $(subst stamp,log,$@) $@
+	-curl -X POST "$(UBADGER_ENDPOINT)"
 
 run: ## Target to run jupyter-hub docker server
 	docker run -i -t -p 8888:8888 $(NAME) | tee $(subst /,_,$(NAME))-run.log
@@ -31,5 +32,5 @@ runclean: ## Target to run jupyter-hub docker server, discarding changes
 	docker run --rm -i -t -p 8888:8888 $(NAME) | tee $(subst /,_,$(NAME))-runclean.log
 
 clean:
-	rm -rf $(subst /,_,$(NAME))*.stamp
-	find . -name 'Untitled*.ipynd' -exec rm -f {} \;
+	-rm -rf $(subst /,_,$(NAME))*.stamp
+	-find . -name 'Untitled*.ipynd' -exec rm -f {} \;
